# ALL

./: .env.example  .gitignore  AGENTS.md  README.md  TBD.md  main.py  pyproject.toml
data/: input.txt
data/output/: graph_annotation_head40.json
legal_metaphor_mvp/: .env.example  .gitignore  README.md  requirements.txt
legal_metaphor_mvp/data/: input.txt
legal_metaphor_mvp/docs/: pororo_wsd_setup.md  prompt-architecture.md
legal_metaphor_mvp/envs/: pororo-wsd.yml
legal_metaphor_mvp/models/: README.md  ft_model_config.json
legal_metaphor_mvp/prompts/: 00_system_role.txt  01_candidate_extract.txt  02_mipvu_judge.txt  03_metaphor_classify.txt  04_annotation_schema.txt  05_korean_legal_mipvu_guidelines.txt  06_validation_check.txt
legal_metaphor_mvp/scripts/: run_annotation_graph.py  test_pororo_wsd.py
legal_metaphor_mvp/src/: graph_build.py  main.py  prompt_utils.py  rdf_convert.py  utils.py  validate_schema.py
legal_metaphor_mvp/tests/: test_contextual_meaning.py  test_dictionary_client.py  test_graph_build.py  test_graph_pipeline.py  test_lemma_mipvu_judge.py  test_rdf_convert.py  test_schemas.py
scripts/: run_annotation_graph.py
src/: validate_schema.py
src/all_metaphor/: cli.py  (+14 more)
tests/: test_candidate_filter.py  test_cli.py  test_config.py  test_dictionary_client.py  test_errors.py  test_graph_pipeline.py  test_io.py  test_krdict_client.py  test_lexical_units.py  test_llm_client.py  test_morphology.py  test_observability.py  test_output_writer.py  test_pipeline.py  test_rdf_convert.py  test_rdf_mapper.py  test_schemas.py  test_validation.py
(+77 files in other folders)
